--- a/GreenCharger/src/app/client/components/search/search.component.html
+++ b/GreenCharger/src/app/client/components/search/search.component.html
@@ -48,12 +48,18 @@
 
       <div nz-row [nzGutter]="16">
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8" [nzLg]="6" *ngFor="let p of results">
-          <a [routerLink]="['/product', p.id]">
+          <a [routerLink]="['/product', p.id]" (click)="trackProductClick(p)">
           <nz-card nzHoverable [nzBordered]="true" [nzCover]="coverTpl" class="search-card">
             <nz-card-meta [nzTitle]="p.name"></nz-card-meta>
             <div style="margin-top:8px">
               <span class="current-price">{{ (p.finalPrice || p.price) | number:'1.0-0' }} đ</span>
               <span *ngIf="p.finalPrice && p.finalPrice < p.price" class="original-price">{{ p.price | number:'1.0-0' }} đ</span>
+            </div>
+            <div class="product-stats">
+              <span class="click-count">
+                <i class="fas fa-eye"></i>
+                {{ getProductClickCount(p.id) }} lượt xem
+              </span>
             </div>
           </nz-card>
           <ng-template #coverTpl>
