--- a/GreenCharger/src/app/core/components/footer/footer.component.html
+++ b/GreenCharger/src/app/core/components/footer/footer.component.html
@@ -82,6 +82,16 @@
         <div class="copyright">
           <p>&copy; 2025 GREEN CHARGER.</p>
         </div>
+        <div class="visitor-stats">
+          <span class="visitor-count">
+            <i class="fas fa-users"></i>
+            {{ visitorStats.totalVisitors }} lượt truy cập
+          </span>
+          <span class="visitor-count">
+            <i class="fas fa-user-plus"></i>
+            {{ visitorStats.totalUsers }} khách hàng đăng ký
+          </span>
+        </div>
         <div class="footer-bottom-links">
           <a routerLink="/privacy" class="footer-bottom-link">Chính sách bảo mật</a>
           <a routerLink="/terms" class="footer-bottom-link">Điều khoản sử dụng</a>
